Go on deleting obsolete code.

--- a/MenuBarTimer/MenuBarTimer-Info.plist
+++ b/MenuBarTimer/MenuBarTimer-Info.plist
@@ -29,7 +29,7 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2011 Cheng Sheng.</string>
 	<key>NSMainNibFile</key>
-	<string>MainMenu</string>
+	<string>Main</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
